# rust_cpp_ffi

./: .gitignore  Cargo.toml  build.rs  build_cpp_lib.sh  run_dev.sh
cpp/: CMakeLists.txt
cpp/include/: cpp_array.hpp  cpp_class.hpp  cpp_map.hpp  cpp_mat.hpp  cpp_number.hpp  cpp_segment.hpp  cpp_str.hpp
cpp/src/: cpp_array.cpp  cpp_class.cpp  cpp_map.cpp  cpp_mat.cpp  cpp_number.cpp  cpp_segment.cpp  cpp_str.cpp  main.cpp
src/: lib.rs  main.rs
src/ffi/: cpp_array.rs  cpp_class.rs  cpp_map.rs  cpp_number.rs  cpp_segment.rs  cpp_str.rs  mod.rs
